--- a/server/public/success.html
+++ b/server/public/success.html
@@ -5,11 +5,18 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<section>
-			<p>
-				We appreciate your business! If you have any questions, please email
-				<a href="mailto:artis@basecode.al">Artis@basecode.al</a>.
-			</p>
-		</section>
+		<div class="container">
+			<section>
+				<p>
+					We appreciate your business! If you have any questions, please email
+					<a href="mailto:artis@basecode.al">Artis@basecode.al</a>.
+				</p>
+			</section>
+			<div class="continue-shopping">
+				<a href="http://localhost:4200/">
+					<button>Continue Shopping</button>
+				</a>
+			</div>
+		</div>
 	</body>
 </html>
